Mudança no cabeçalho da página

--- a/webgl_loader_obj_mtl.html
+++ b/webgl_loader_obj_mtl.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>three.js webgl - OBJLoader + MTLLoader</title>
+    <title>Trabalho - Computação Gráfica</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <style>
@@ -13,7 +13,7 @@
             margin: 0px;
             overflow: hidden;
         }
-        
+
         #info {
             color: #fff;
             position: absolute;
@@ -23,7 +23,7 @@
             z-index: 100;
             display: block;
         }
-        
+
         #info a,
         .button {
             color: #f00;
@@ -35,9 +35,7 @@
 </head>
 
 <body>
-    <div id="info">
-        <a href="http://threejs.org" target="_blank" rel="noopener">three.js</a> - OBJLoader + MTLLoader
-    </div>
+    <div id="info">Trabalho - Computação Gráfica</div>
 
     <script src="js/three.js"></script>
 
