--- a/index.html
+++ b/index.html
@@ -49,20 +49,24 @@
         let controls = new THREE.OrbitControls(camera);
 
         // Renderer setup
-        let renderer = new THREE.WebGLRenderer();
+        let renderer = new THREE.WebGLRenderer({antialias: true});
         renderer.setSize(window.innerWidth, window.innerHeight);
         renderer.setClearColor(palette[0]);
+        renderer.shadowMapEnabled = true;
         document.body.appendChild(renderer.domElement);
 
         // Light setup
         let directionalLight = new THREE.DirectionalLight(0xFFFFFF, 1, 100);
-        directionalLight.position.set(0, 1, -1);
+        directionalLight.position.set(1, 1, -1);
         directionalLight.castShadow = true;
+        
+        let directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight);
 
         // Scene setup
         let scene = new THREE.Scene();
         scene.position.set(0, 0.5, 0);
         scene.add(directionalLight);
+        scene.add(directionalLightHelper);
 
         dolphin.position.set(0.5, 0.1, 0.32);
         dolphin.scale.set(0.01, 0.01, 0.01);
