--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         import { scene as delorean } from "./js/scenes/delorean.js";
         import { scene as palmTree } from "./js/scenes/palm_tree.js";
 
+        // Colors setup
         const palette = [
             new THREE.Color(0xff71ce),
             new THREE.Color(0x01cdfe),
@@ -38,56 +39,7 @@
         let currentColorIndex = 0;
         let currentColorValue = palette[currentColorIndex];
 
-        // Camera setup
-        let camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.x = -3;
-        camera.position.y = 1;
-        camera.position.z = -4;
-        camera.lookAt(new THREE.Vector3(0, 0, 0));
-
-        // Controls setup
-        let controls = new THREE.OrbitControls(camera);
-
-        // Renderer setup
-        let renderer = new THREE.WebGLRenderer({antialias: true});
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setClearColor(palette[0]);
-        renderer.shadowMapEnabled = true;
-        document.body.appendChild(renderer.domElement);
-
-        // Light setup
-        let directionalLight = new THREE.DirectionalLight(0xFFFFFF, 1, 100);
-        directionalLight.position.set(1, 1, -1);
-        directionalLight.castShadow = true;
-        
-        let directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight);
-
-        // Scene setup
-        let scene = new THREE.Scene();
-        var scene_matrix = new THREE.Matrix4().makeTranslation(0, 0.5, 0);
-        scene.applyMatrix(scene_matrix);
-        scene.add(directionalLight);
-        scene.add(directionalLightHelper);
-
-        var dolphin_matrix = new THREE.Matrix4().makeTranslation(0.5, 0.1, 0.32);
-        dolphin_matrix.multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
-        dolphin_matrix.multiply(new THREE.Matrix4().makeRotationY(Math.PI/2));
-        dolphin.applyMatrix(dolphin_matrix);
-        scene.add(dolphin);
-        
-        var delorean_matrix = new THREE.Matrix4().makeTranslation(0, -6.95, 0);       
-        delorean.applyMatrix(delorean_matrix);
-        scene.add(delorean);
-
-        var palmTree_matrix = new THREE.Matrix4().makeTranslation(0, 0, -1.2);
-        palmTree_matrix.multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
-        palmTree.applyMatrix(palmTree_matrix);
-        scene.add(palmTree);
-
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-
+        function nextColor() {
             const nextColorIndex = (currentColorIndex + 1) % palette.length;
 
             const nextColorValue = palette[nextColorIndex];
@@ -117,7 +69,82 @@
                 (currentColorValue.b - nextColorValue.b) <= colorStep) {
                 currentColorIndex++;
             }
+        }
 
+        // Camera setup
+        let cameras = [
+            new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000),
+            new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000)
+        ];
+
+        cameras[0].lookAt(new THREE.Vector3(0, 0, 0));
+        cameras[0].applyMatrix(new THREE.Matrix4().makeTranslation(-3, 1, -4));
+
+        cameras[1].lookAt(new THREE.Vector3(0, 0, 0));
+        cameras[1].applyMatrix(new THREE.Matrix4().makeTranslation(3, 1, 4));
+
+        let camera = cameras[0];
+        let cameraControls = new THREE.OrbitControls(camera);
+
+        function changeCamera(cameraIndex) {
+            camera = cameras[cameraIndex];
+            cameraControls = new THREE.OrbitControls(camera);
+        }
+
+        // Renderer setup
+        let renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.setClearColor(palette[0]);
+        renderer.shadowMapEnabled = true;
+        document.body.appendChild(renderer.domElement);
+
+        // Light setup
+        let directionalLight = new THREE.DirectionalLight(0xFFFFFF, 1, 100);
+        directionalLight.position.set(1, 1, -1);
+        directionalLight.castShadow = true;
+
+        let directionalLightHelper = new THREE.DirectionalLightHelper(directionalLight);
+
+        // Scene setup
+        let scene = new THREE.Scene();
+        var scene_matrix = new THREE.Matrix4().makeTranslation(0, 0.5, 0);
+        scene.applyMatrix(scene_matrix);
+        scene.add(directionalLight);
+        scene.add(directionalLightHelper);
+
+        var dolphin_matrix = new THREE.Matrix4().makeTranslation(0.5, 0.1, 0.32);
+        dolphin_matrix.multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
+        dolphin_matrix.multiply(new THREE.Matrix4().makeRotationY(Math.PI / 2));
+        dolphin.applyMatrix(dolphin_matrix);
+        scene.add(dolphin);
+
+        var delorean_matrix = new THREE.Matrix4().makeTranslation(0, -6.95, 0);
+        delorean.applyMatrix(delorean_matrix);
+        scene.add(delorean);
+
+        var palmTree_matrix = new THREE.Matrix4().makeTranslation(0, 0, -1.2);
+        palmTree_matrix.multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
+        palmTree.applyMatrix(palmTree_matrix);
+        scene.add(palmTree);
+
+        // Controls
+        document.addEventListener('keydown', onKeyDown, false);
+
+        function onKeyDown(event) {
+            switch (event.keyCode) {
+                case 49:
+                    changeCamera(0);
+                    break;
+                case 50:
+                    changeCamera(1);
+                    break;
+            }
+        }
+
+        // Animation loop
+        function animate() {
+            requestAnimationFrame(animate);
+            nextColor();
             directionalLight.color.set(currentColorValue);
             renderer.render(scene, camera);
         }
