--- a/index.html
+++ b/index.html
@@ -96,9 +96,13 @@
         // Scene setup
         let scene = new THREE.Scene();
 
-        lamp.scene.position.set(1, 1, -1);
+        let lampPivotPoint = new THREE.Object3D();
 
-        scene.add(lamp.scene);
+        lamp.scene.position.set(1.25, 1.25, -1.25);
+
+        lampPivotPoint.add(lamp.scene);
+
+        scene.add(lampPivotPoint);
 
         dolphin.applyMatrix(
             new THREE.Matrix4().makeTranslation(0.5, 0.1, 0.32)
@@ -124,9 +128,9 @@
         // Controls
         // let 
 
-        document.addEventListener('keydown', onKeyDown, false);
+        document.addEventListener('keypress', onKeyPress, false);
 
-        function onKeyDown(event) {
+        function onKeyPress(event) {
             switch (event.keyCode) {
                 case 49:
                     changeCamera(0);
@@ -145,6 +149,16 @@
                     break;
             }
         }
+
+        document.addEventListener('keydown', onKeyDown, false);
+
+        function onKeyDown(event) {
+            switch(event.keyCode) {
+                case 90:
+                    break;
+            }
+        }
+
         // Animation loop
         function animate() {
             requestAnimationFrame(animate);
