--- a/index.html
+++ b/index.html
@@ -15,12 +15,22 @@
             display: block;
         }
 
+        #windowFrame {
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+
         #info {
+            background: linear-gradient(135deg, #f0f 0, #0ff 100%);
+            background-size: cover;
             text-align: center;
             position: absolute;
             left: 0;
-            top: 0;
+            top: 70px;
             margin: 1em;
+            padding: 1em;
+            opacity: 0.7;
         }
 
         #cameras {
@@ -52,10 +62,65 @@
             width: 5em;
             padding: 0.65em;
         }
+
+        #mainWindow {
+            width: 100%;
+            height: 100%;
+        }
+
+        .windowFrame .top,
+        .windowFrame .bottom,
+        .windowFrame .left,
+        .windowFrame .right {
+            position: absolute;
+        }
+
+        .windowFrame .top,
+        .windowFrame .bottom {
+            height: 0;
+            width: 100%;
+            padding-bottom: 33%;
+            background-size: 100% auto;
+            background-repeat: no-repeat;
+        }
+
+        .windowFrame .top {
+            top: 0;
+            background-position: center top;
+            background-image: url("img/windowFrameTop.png");
+        }
+
+        .windowFrame .bottom {
+            bottom: 0;
+            background-position: center bottom;
+            background-image: url("img/windowFrameBottom.png");
+        }
+
+        .windowFrame .left,
+        .windowFrame .right {
+            height: 100%;
+            width: 3px;
+        }
+
+        .windowFrame .left {
+            left: 0;
+            background-image: url("img/windowFrameLeft.png");
+        }
+
+        .windowFrame .right {
+            right: 0;
+            background-image: url("img/windowFrameRight.png");
+        }
     </style>
 </head>
 
 <body>
+    <div id="mainWindow" class="windowFrame">
+        <div class="top"></div>
+        <div class="bottom"></div>
+        <div class="left"></div>
+        <div class="right"></div>
+    </div>
     <div id="info">
         <h2>【Ｃａｍｅｒａｓ】（悪ャタ）</h2>
         <ul id="cameras">
@@ -100,16 +165,16 @@
             right: (aspectRatio * viewSize) / 2,
             top: viewSize / 2,
             bottom: -viewSize / 2,
-            near: -100,
-            far: 100
+            near: -1000,
+            far: 1000
         }
 
         // Camera setup
         let cameras = [
-            new THREE.PerspectiveCamera(60, w / h, 1, 1000),
-            new THREE.PerspectiveCamera(60, w / h, 1, 1000),
-            new THREE.PerspectiveCamera(60, w / h, 1, 1000),
-            new THREE.PerspectiveCamera(60, w / h, 1, 1000),
+            new THREE.PerspectiveCamera(75, w / h, 1, 1000),
+            new THREE.PerspectiveCamera(75, w / h, 1, 1000),
+            new THREE.PerspectiveCamera(75, w / h, 1, 1000),
+            new THREE.PerspectiveCamera(75, w / h, 1, 1000),
             new THREE.OrthographicCamera(
                 _viewport.left,
                 _viewport.right,
@@ -119,20 +184,12 @@
                 _viewport.far)
         ];
 
-        cameras[0].lookAt(new THREE.Vector3(0, 0, 0));
-        cameras[0].applyMatrix(new THREE.Matrix4().makeTranslation(-3, 7.5, -4));
-
-        cameras[1].lookAt(new THREE.Vector3(0, 0, 0));
-        cameras[1].applyMatrix(new THREE.Matrix4().makeTranslation(3, 3.5, 4));
-
-        cameras[2].lookAt(new THREE.Vector3(0, 0, 0));
-        cameras[2].applyMatrix(new THREE.Matrix4().makeTranslation(-3, 3.5, 4));
-
-        cameras[3].lookAt(new THREE.Vector3(0, 0, 0));
-        cameras[3].applyMatrix(new THREE.Matrix4().makeTranslation(3, 0.5, -4));
-
-        cameras[4].applyMatrix(new THREE.Matrix4().makeTranslation(-1, 0.5, 0));
-        cameras[4].zoom = 100;
+        cameras[0].applyMatrix(new THREE.Matrix4().makeTranslation(-5, 1, 0));
+        cameras[1].applyMatrix(new THREE.Matrix4().makeTranslation(0, 1, 5));
+        cameras[2].applyMatrix(new THREE.Matrix4().makeTranslation(0, 1, -5));
+        cameras[3].applyMatrix(new THREE.Matrix4().makeTranslation(5, 1, 0));
+        cameras[4].applyMatrix(new THREE.Matrix4().makeTranslation(20, 2.5, 0));
+        cameras[4].zoom = 35;
         cameras[4].updateProjectionMatrix();
 
         let camera = cameras[0];
@@ -152,6 +209,10 @@
         renderer.setClearColor(0xff71ce);
         renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
+
+        window.addEventListener('resize', function () {
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        });
 
         // Scene setup
         let scene = new THREE.Scene();
@@ -218,7 +279,7 @@
         );
         water.rotation.x = - Math.PI / 2;
         water.applyMatrix(
-            new THREE.Matrix4().makeTranslation(0, -1.18, 0)
+            new THREE.Matrix4().makeTranslation(0, -1.20, 0)
         );
         scene.add(water);
 
@@ -288,6 +349,8 @@
             let lightColor = lamp.nextColor();
             light.color.set(lightColor);
             ui.setLightColor(lightColor);
+            ui.setLightHeight(lamp.scene.position.y);
+            ui.setLightRotation(lampPivotPoint.rotation.y);
         }
 
         animate();
