--- a/index.html
+++ b/index.html
@@ -137,6 +137,12 @@
         <div id="lightHeight"></div>
         <h4>【Ｒｏｔａｔｉｏｎ】（ダマァ）</h4>
         <div id="lightRotation"></div>
+        <h4>【ｍｕｓｉｃ】（花の艶）</h4>
+        <div id="music">
+            <audio controls>
+                <source src="music/LÜNE - Rêve Lucide - 04 Rêve Lucide.mp3" type="audio/mpeg">
+            </audio>
+        </div>
     </div>
 
     <script id="vertexShader" type="x-shader/x-vertex">
