--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
         }
 
         #info {
-            background: linear-gradient(135deg, #f0f 0, #0ff 100%);
+            background: linear-gradient(135deg, rgba(255, 0, 255, 0.7) 0, rgba(0, 255, 255, 0.7) 100%);
             background-size: cover;
             text-align: center;
             position: absolute;
-            left: 0;
-            top: 70px;
-            margin: 1em;
-            padding: 1em;
-            opacity: 0.7;
+            left: 1em;
+            top: 1em;
         }
 
         #cameras {
@@ -190,6 +187,7 @@
         }    
     </script>
     <script src="js/lib/three.js"></script>
+    <script src="js/lib/OBJLoader.js"></script>
     <script src="js/lib/GLTFLoader.js"></script>
     <script src="js/lib/OrbitControls.js"></script>
     <script src="js/lib/keydrown.min.js"></script>
@@ -201,6 +199,7 @@
         import { scene as palmTree } from "./js/scenes/palm_tree.js";
         import { scene as terrain } from "./js/scenes/terrain.js";
         import { scene as curve } from "./js/scenes/curve.js";
+        import { randomRock as randomRock } from "./js/scenes/rocks.js";
         import lamp from "./js/scenes/lamp.js";
         import cameras from "./js/cameras.js";
         import ui from "./js/ui.js";
@@ -230,7 +229,7 @@
         scene.add(lampPivotPoint);
 
         dolphin.applyMatrix(
-            new THREE.Matrix4().makeTranslation(0.5, 0.1, 0.32)
+            new THREE.Matrix4().makeTranslation(0.5, 2.1, 0)
                 .multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01))
                 .multiply(new THREE.Matrix4().makeRotationY(Math.PI / 2))
         );
@@ -238,13 +237,14 @@
         scene.add(dolphin);
 
         delorean.applyMatrix(
-            new THREE.Matrix4().makeTranslation(0, -1.28, -0.08)
+            new THREE.Matrix4().makeTranslation(0, -1.28, -0.35)
+                .multiply(new THREE.Matrix4().makeRotationY(0.08))
         );
 
         scene.add(delorean);
 
         palmTree.applyMatrix(
-            new THREE.Matrix4().makeTranslation(0, 0, -1.2)
+            new THREE.Matrix4().makeTranslation(3, 0, -2)
                 .multiply(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01))
         );
 
@@ -288,6 +288,7 @@
         // Curve setup
         curve.applyMatrix(
             new THREE.Matrix4().makeTranslation(0, -1.25, 0)
+                .multiply(new THREE.Matrix4().makeRotationY(0.5 * Math.PI))
         );
 
         scene.add(curve);
@@ -318,12 +319,13 @@
         var sphere = new THREE.Mesh(geometry, shaderMaterial);
 
         sphere.position.y = 1.5;
-        sphere.position.z = 0.15;
 
         scene.add(sphere);
 
         // Controls
         document.addEventListener('keypress', onKeyPress, false);
+
+        var rocks = [];
 
         function onKeyPress(event) {
             switch (event.keyCode) {
@@ -347,40 +349,87 @@
                     cameras.changeCamera(4);
                     ui.setCamera(4);
                     break;
+                case 32:
+                    spawnRock();
+                    break;
             }
         }
 
         // Lamp rotation
         let lampRotation = 0;
 
-        kd.Z.down(function () {
+        kd.J.down(function () {
             lampRotation = 0.05;
         });
-        kd.Z.up(function () {
+        kd.J.up(function () {
             lampRotation = 0;
         });
-        kd.X.down(function () {
+        kd.L.down(function () {
             lampRotation = -0.05;
         });
-        kd.X.up(function () {
+        kd.L.up(function () {
             lampRotation = 0;
         });
 
         // Lamp height
         let lampHeight = 0;
 
-        kd.A.down(function () {
+        kd.I.down(function () {
             lampHeight = +0.05;
         });
-        kd.A.up(function () {
+        kd.I.up(function () {
             lampHeight = 0;
         });
-        kd.S.down(function () {
+        kd.K.down(function () {
             lampHeight = -0.05;
         });
-        kd.S.up(function () {
+        kd.K.up(function () {
             lampHeight = 0;
         });
+
+        // Car movement
+        let deloreanZ = 0;
+
+        kd.A.down(function () {
+            deloreanZ = +0.15;
+        });
+        kd.A.up(function () {
+            deloreanZ = 0;
+        });
+        kd.D.down(function () {
+            deloreanZ = -0.15;
+        });
+        kd.D.up(function () {
+            deloreanZ = 0;
+        });
+
+        var possibleZ = [-2, 0, 2];
+
+        var timeout;
+
+        function spawnRock() {
+            var rock = randomRock();
+            rock.position.x = -15;
+            rock.position.z = possibleZ[Math.floor(Math.random() * possibleZ.length)];
+            scene.add(rock);
+            rocks.push(rock);
+
+            timeout = setTimeout(spawnRock, 1000);
+        }
+
+        function checkCollision(target) {
+            // for (var vertexIndex = 0; vertexIndex < target.geometry.vertices.length; vertexIndex++) {
+            //     var localVertex = target.geometry.vertices[vertexIndex].clone();
+            //     var globalVertex = target.matrix.multiplyVector3(localVertex);
+            //     var directionVector = globalVertex.sub(target.position);
+
+            //     var ray = new THREE.Ray(target.position, directionVector.clone().normalize());
+            //     var collisionResults = ray.intersectObjects(rocks);
+            //     if (collisionResults.length > 0 && collisionResults[0].distance < directionVector.length()) {
+            //         console.log("hey");
+            //     }
+            // }
+        }
 
         // Animation loop
         function animate() {
@@ -389,12 +438,17 @@
             requestAnimationFrame(animate);
             lampPivotPoint.rotation.y += lampRotation;
             lamp.scene.position.y += lampHeight;
+            delorean.position.z += deloreanZ;
             renderer.render(scene, cameras.currentCamera());
             let lightColor = lamp.nextColor();
             light.color.set(lightColor);
             ui.setLightColor(lightColor);
             ui.setLightHeight(lamp.scene.position.y);
             ui.setLightRotation(lampPivotPoint.rotation.y);
+            rocks.forEach(function (rock) {
+                rock.position.x += 0.2;
+            });
+            checkCollision(delorean.collisionBox);
         }
 
         animate();
