id set to audio, not div

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div id="lightRotation"></div>
         <h4>【ｍｕｓｉｃ】（花の艶）</h4>
         <div>
-            <audio controls>
+            <audio  id="music" controls>
                 <source src="music/LÜNE - Rêve Lucide - 04 Rêve Lucide.mp3" type="audio/mpeg">
             </audio>
         </div>
